[package]
name = "ej"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/elarasuz/ej"
repository = "https://github.com/elarasuz/ej"
keywords = ["empty"]
description = "placeholder name"

[dependencies]
btleplug = "0.11"
bleasy = "0.3"
tokio = { version = "1.36", features = ["macros", "rt", "rt-multi-thread"] }
futures = "0.3"
tokio-stream = "0.1.14"
pretty_env_logger = "0.5.0"
uuid = "1.7"